--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Load Cache
-        uses: action/cache/restore@v3
+        uses: actions/cache/restore@v3
         with:
           path: ~/hostcwd/.buildozer
           key: ${{ runner.os }}-buildozer-${{ hashFiles('**/requirements.txt') }}
@@ -28,7 +28,7 @@ jobs:
           command: 'buildozer android release'
       
       - name: Save Cache
-        uses: action/cache/save@v3
+        uses: actions/cache/save@v3
         with:
           path: ~/hostcwd/.buildozer
           key: ${{ runner.os }}-buildozer-${{ hashFiles('**/requirements.txt') }}
