fix: fixed release workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Create workdir
+        run: mkdir -p ~/hostcwd
+        env:
+          USER: root
+
       - name: Load Cache
         uses: actions/cache/restore@v3
         with:
