--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,18 @@ jobs:
           path: ./.buildozer
           key: ${{ runner.os }}-buildozer-${{ hashFiles('**/requirements.txt') }}
 
+      - name: Force Gradle 8.7 and compatible AGP
+        run: |
+          # Wait for buildozer to create the gradle wrapper
+          buildozer android update || true
+          
+          # Update Gradle wrapper
+          find ~/.buildozer -name "gradle-wrapper.properties" -exec sed -i 's|gradle-[0-9.]*-bin.zip|gradle-8.7-bin.zip|g' {} \;
+          
+          # Update build.gradle for AGP version
+          find ~/.buildozer -name "build.gradle" -exec sed -i "s/com.android.tools.build:gradle:[0-9.]*/com.android.tools.build:gradle:8.2.0/g" {} \;
+
+
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1
         with:
