fix: fixed release workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,8 @@ jobs:
         with:
           path: ./.buildozer
           key: ${{ runner.os }}-buildozer-${{ hashFiles('**/requirements.txt') }}
+        env:
+          USER: root
 
 
       - name: Release Branch
@@ -50,7 +52,7 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          body_path: /release_notes/${{ github.event.release.tag_name || 'default' }}.md
+          body_path: ./release_notes/${{ github.event.release.tag_name || 'default' }}.md
           draft: false
           prerelease: false
 
