--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,10 @@ jobs:
 
       - name: Fix file permissions
         run: |  
-          sudo chown -R $USER:$USER bin/
-          sudo chown -R $USER:$USER .buildozer/
+          sudo chown -R $USER:$USER ./bin/
+          sudo chown -R $USER:$USER ./.buildozer/
           # If you also want to cache .buildozer directory
-          sudo chown -R $USER:$USER ~/.buildozer/ || true 
+          sudo chown -R $USER:$USER ./.buildozer/ || true 
       
       - name: Save Cache
         if: always()
@@ -57,8 +57,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref || 'not-tagged' }}
-          release_name: Release ${{ github.ref || 'not-tagged' }}
+          tag_name: ${{ github.event.release.tag_name || 'not-tagged' }}
+          release_name: Release ${{ github.event.release.tag_name || 'not-tagged' }}
           body_path: ./release_notes/${{ github.event.release.tag_name || 'default' }}.md
           draft: false
           prerelease: false
