--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,10 @@ jobs:
           draft: false
           prerelease: false
 
+      - name: Find APK
+        id: apk
+        run: echo "APK=$(ls ./bin/*.apk | head -n 1)" >> $GITHUB_ENV
+
       - name: Upload Release APK
         id: upload-release-apk
         uses: actions/upload-release-asset@v1
@@ -70,6 +74,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./bin/*.apk
+          asset_path: ${{ env.APK }}
           asset_name: parking-register.apk
           asset_content_type: application/vnd.android.package-archive
