--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
             find ./.buildozer -name "gradle-wrapper.properties" && \
             find ./.buildozer -name "gradle-wrapper.properties" -exec sed -i 's|gradle-[0-9.]*-all.zip|gradle-8.7-bin.zip|g' {} \; || true
             buildozer android release
+            buildozer android release --format=apk
         env:
           USER: root
           PIP_BREAK_SYSTEM_PACKAGES: '1'  # This is needed for Ubuntu 24.04 and later to allow pip to upgrade packages
@@ -69,9 +70,11 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Find APK
+      - name: Find APK and AAB
         id: apk
-        run: echo "APK=$(ls ./bin/*.apk | head -n 1)" >> $GITHUB_ENV
+        run: |
+          echo "APK=$(ls ./bin/*.apk | head -n 1)" >> $GITHUB_ENV
+          echo "AAB=$(ls ./bin/*.aab | head -n 1)" >> $GITHUB_ENV
 
       - name: Upload Release APK
         id: upload-release-apk
@@ -82,4 +85,15 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ${{ env.APK }}
           asset_name: parking-register.apk
+          asset_content_type: application/vnd.android.package-archive
+
+      - name: Upload Release AAB
+        id: upload-release-aab
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ${{ env.AAB }}
+          asset_name: parking-register.aab
           asset_content_type: application/vnd.android.package-archive
