--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,7 @@ jobs:
 
       - name: Find APK and AAB
         id: apk
+        if : always()
         run: |
           echo "APK=$(ls ./bin/*.apk | head -n 1)" >> $GITHUB_ENV
           echo "AAB=$(ls ./bin/*.aab | head -n 1)" >> $GITHUB_ENV
@@ -79,6 +80,7 @@ jobs:
       - name: Upload Release APK
         id: upload-release-apk
         uses: actions/upload-release-asset@v1
+        if: env.APK != ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -90,6 +92,7 @@ jobs:
       - name: Upload Release AAB
         id: upload-release-aab
         uses: actions/upload-release-asset@v1
+        if: env.AAB != ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
