--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,14 +27,18 @@ jobs:
 
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1
+        id: build-with-buildozer
         with:
           repository_root: .
           workdir: .
           buildozer_version: stable
           command: | 
-            buildozer android update || true
+            buildozer android update
+            echo "update=true" >> ${GITHUB_OUTPUT}
             find ./.buildozer -name "gradle-wrapper.properties" && \
             find ./.buildozer -name "gradle-wrapper.properties" -exec sed -i 's|gradle-[0-9.]*-all.zip|gradle-8.7-bin.zip|g' {} \; || true
+            buildozer android release
+            buildozer android debug
         env:
           USER: root
           PIP_BREAK_SYSTEM_PACKAGES: '1'  # This is needed for Ubuntu 24.04 and later to allow pip to upgrade packages
@@ -47,26 +51,13 @@ jobs:
           sudo chown -R $USER:$USER ./.buildozer/ || true 
       
       - name: Save Cache
-        if: success()
+        if: steps.build-with-buildozer.outputs.update == 'true'
         uses: actions/cache/save@v3
         with:
           path: ./.buildozer
           key: ${{ runner.os }}-buildozer-${{ hashFiles('./buildozer.spec') }}
         env:
           USER: root
-      
-      - name: Buildozer create Release and Debug APK/AAB
-        uses: ArtemSBulgakov/buildozer-action@v1
-        with:
-          repository_root: .
-          workdir: .
-          buildozer_version: stable
-          command: |
-            buildozer android release
-            buildozer android debug
-        env:
-          USER: root
-          PIP_BREAK_SYSTEM_PACKAGES: '1'  # This is needed for Ubuntu 24.04 and later to allow pip to upgrade packages
 
 
       - name: Release Branch
