--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,9 @@ filelock==3.19.1
 filetype==1.2.0
 idna==3.10
 Jinja2==3.1.6
-Kivy==2.3.1
+Kivy>=2.3.0
 Kivy-Garden==0.1.5
-kivymd==1.2.0
+kivymd2>=2.0.0
 MarkupSafe==3.0.3
 packaging==25.0
 pexpect==4.9.0
